--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 lxml==4.9.2
 MarkupSafe==2.1.2
 mecab==0.996.3
+mock==5.0.2
 mozcpy==0.1.1
 mpmath==1.3.0
 networkx==3.1
@@ -34,6 +35,7 @@ regex==2023.5.5
 requests==2.30.0
 sacrebleu==2.3.1
 six==1.16.0
+subword-nmt==0.3.8
 sympy==1.11.1
 tabulate==0.9.0
 torch==2.0.1
